# legalai

./: .gitattributes  .gitignore  Dockerfile  Makefile  README.md  SPEC.md  app.py  benchmark_validators.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: train.csv
models/: classifier.pkl
portfolio/: index.html
reports/: confusion_matrix.md  confusion_matrix.txt  metrics.json  validation_benchmark.json
samples/: sample.eml
scripts/: verify.sh
src/ldc/: cli.py  eml_intake.py  llm_classifier.py  model.py  purge.py  schema.py  validators.py
tests/: conftest.py  test_infer_eml.py  test_purge.py  test_schema.py  test_smoke.py  test_validators.py
